<!DOCTYPE resources [<!ENTITY clientId "57b97596-0bf3-4fe7-8250-31e0f9ea90c7">]>
<resources>
    <string name="app_name">Beach Rendez-vous</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_create">Create</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submenu_header_search">Let\'s Search for an Event</string>
    <string name="submenu_header_create">Let\'s Create an Event!</string>
    <string name="submenu_btn_food">Food</string>
    <string name="submenu_btn_movies">Movies</string>
    <string name="submenu_btn_sports">Sports</string>
    <string name="action_settings">Settings</string>
    <string name="action_signOut">Sign Out</string>
    <string name="action_info">Info</string>
    <string name="action_profile">Profile</string>
    <string name="label_date">Date:</string>
    <string name="label_place">Place:</string>
    <string name="label_time">Time:</string>
    <string name="label_num_people">No. of People:</string>
    <string name="action_return">&lt; RETURN</string>
    <string name="info_header_faq">FAQ</string>
    <string name="info_header_credits">CREDITS</string>
    <string name="general_connection_error">Connection Error</string>
    <string name="user_cancelled">Cancelled by User</string>

    <string name="client_Id">&clientId;</string>
    <string name="msalPrefix">msal&clientId;</string>
    <string name="hint_additional_info">Info ...</string>
    <string name="label_additional_info">Additional Info:</string>
    <string name="hint_time">HH:MM</string>
    <string name="btn_join">Join</string>
    <string name="tv_fillerText">TextView</string>
    <string name="btn_create">Create</string>
    <string name="sport_info_search">Join a game! What Sport?</string>
    <string name="sport_info_create">Create an event! Which Sport?</string>
    <string name="filler_textViews">TextView</string>
    <string name="img_arrow">Arrow</string>
    <string name="label_duration">Duration:</string>
    <string name="tv_event_type">Type of Event</string>
    <string name="hint_dateFormat">MM/DD/YYYY</string>
    <string name="question_01">Q: Is this app the official meet-up app of CSULB?</string>
    <string name="answer_01">A: Not yet! It is our hope that, eventually, it will be.</string>
    <string name="question_02">Q: How much of my personal information is collected by this app?</string>
    <string name="answer_02">A: Your school-associated e-mail and your full name (as supplied to the school) is all that we gather.</string>
    <string name="food_info_search">What sounds good to eat??</string>
    <string name="food_info_create">Where should we go eat at?</string>
    <string name="movies_info_search">What movie would you like to watch?</string>
    <string name="movies_info_create">Which movie should we watch?</string>
    <string name="food_create_header">Let\'s add some info</string>
    <string name="success_joined_event">You Successfully Joined An Event</string>
    <string name="success_created_event">You Successfully Created An Event</string>
    <string name="header_admin">Admin</string>
    <string name="header_event_type">Type</string>
    <string name="header_date">Date</string>
    <string name="header_place">Place</string>
    <string name="header_food_events">Which date and time look best?</string>

</resources>
