<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FoodCreateDetails">

    <ScrollView
        android:id="@+id/scrollView_foodCreate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constLay_foodCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="168dp">

            <TextView
                android:id="@+id/foodCreate_eventType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/tv_event_type"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_foodCreate_labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="65dp" />

            <TextView
                android:id="@+id/foodCreate_dateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_date"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guide_foodCreate_datePlace"
                app:layout_constraintEnd_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_labelDate" />

            <EditText
                android:id="@+id/foodCreate_dateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_dateFormat"
                app:layout_constraintBottom_toTopOf="@+id/guide_foodCreate_datePlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_labelDate" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_foodCreate_datePlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="130dp" />

            <TextView
                android:id="@+id/foodCreate_placeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_place"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guide_foodCreate_placeTime"
                app:layout_constraintEnd_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_datePlace" />

            <TextView
                android:id="@+id/foodCreate_placeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toTopOf="@+id/guide_foodCreate_placeTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintTop_toBottomOf="@+id/foodCreate_dateText" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_foodCreate_placeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="195dp" />

            <TextView
                android:id="@+id/foodCreate_timeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_time"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guide_foodCreate_timeNum"
                app:layout_constraintEnd_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_placeTime" />

            <EditText
                android:id="@+id/foodCreate_timeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_time"
                app:layout_constraintBottom_toTopOf="@+id/guide_foodCreate_timeNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_placeTime" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_foodCreate_timeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="260dp" />

            <TextView
                android:id="@+id/foodCreate_numOfPeople"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_num_people"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_numDuration"
                app:layout_constraintEnd_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_timeNum" />

            <EditText
                android:id="@+id/foodCreate_numText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/guideline_numDuration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_foodCreate_timeNum" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_numDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="325dp" />

            <TextView
                android:id="@+id/foodCreate_Duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_duration"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_DurationComment"
                app:layout_constraintEnd_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_numDuration" />

            <EditText
                android:id="@+id/foodCreate_durationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_time"
                android:inputType="time"
                app:layout_constraintBottom_toTopOf="@+id/guideline_DurationComment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guideline_numDuration" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_DurationComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="390dp" />

            <TextView
                android:id="@+id/foodCreate_commentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_additional_info"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guide_foodCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_DurationComment" />

            <EditText
                android:id="@+id/foodCreate_commentText"
                android:layout_width="360dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="left"
                android:hint="@string/hint_additional_info"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/btn_foodCreate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodCreate_commentLabel" />

            <Button
                android:id="@+id/btn_foodCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_create"
                app:layout_constraintBottom_toBottomOf="@id/constLay_foodCreate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/foodCreate_commentText" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_foodCreate_vert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="194dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</FrameLayout>