<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.MoviesCreateDetails">

    <ScrollView
        android:id="@+id/createEvent_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/moviesCreate_constLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="168dp">

            <TextView
                android:id="@+id/moviesCreate_eventType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/tv_event_type"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guide_movieCreate_labelDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_movieCreate_labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="65dp" />

            <TextView
                android:id="@+id/moviesCreate_dateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_date"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guide_moviesCreate_datePlace"
                app:layout_constraintEnd_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_movieCreate_labelDate" />

            <EditText
                android:id="@+id/createEvent_dateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_dateFormat"
                app:layout_constraintBottom_toTopOf="@+id/guide_moviesCreate_datePlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_movieCreate_labelDate" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_moviesCreate_datePlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="125dp" />

            <TextView
                android:id="@+id/createEvent_placeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_place"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guide_moviesCreate_placeTime"
                app:layout_constraintEnd_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_moviesCreate_datePlace" />

            <Spinner
                android:id="@+id/createEvent_placeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintBottom_toTopOf="@+id/guide_moviesCreate_placeTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_moviesCreate_datePlace" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_moviesCreate_placeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="185dp" />

            <TextView
                android:id="@+id/createEvent_timeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_time"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guide_moviesCreate_timeNum"
                app:layout_constraintEnd_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_moviesCreate_placeTime" />

            <EditText
                android:id="@+id/createEvent_timeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_time"
                app:layout_constraintBottom_toTopOf="@+id/guide_moviesCreate_timeNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_moviesCreate_placeTime" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_moviesCreate_timeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="245dp" />

            <TextView
                android:id="@+id/createEvent_numOfPeople"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_num_people"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_numDuration"
                app:layout_constraintEnd_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_moviesCreate_timeNum" />

            <EditText
                android:id="@+id/createEvent_numText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/guideline_numDuration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guide_moviesCreate_timeNum" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_numDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="305dp" />

            <TextView
                android:id="@+id/createEvent_Duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_duration"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_DurationComment"
                app:layout_constraintEnd_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_numDuration" />

            <EditText
                android:id="@+id/createEvent_DurationText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/hint_time"
                android:inputType="time"
                app:layout_constraintBottom_toTopOf="@+id/guideline_DurationComment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintTop_toTopOf="@+id/guideline_numDuration" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_DurationComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="365dp" />

            <TextView
                android:id="@+id/createEvent_commentLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/martel_sans_bold"
                android:text="@string/label_additional_info"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guide_moviesCreate_vert"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_DurationComment" />

            <EditText
                android:id="@+id/createEvent_commentText"
                android:layout_width="360dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:hint="@string/hint_additional_info"
                android:inputType="textMultiLine"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/moviesCreate_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createEvent_commentLabel" />

            <Button
                android:id="@+id/moviesCreate_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:layout_marginEnd="28dp"
                android:layout_marginRight="28dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:text="@string/btn_create"
                app:layout_constraintBottom_toBottomOf="@id/moviesCreate_constLay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createEvent_commentText" />

            <android.support.constraint.Guideline
                android:id="@+id/guide_moviesCreate_vert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="195dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>

