<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SubMenuFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/subMenu_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/submenu_header"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/subMenu_btn_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/subMenu_btn_food"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:autoLink="none"
            android:autoText="true"
            android:background="@color/colorAccent"
            android:text="@string/submenu_btn_food"
            app:layout_constraintBottom_toTopOf="@+id/subMenu_btn_movies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/subMenu_btn_movies"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/submenu_btn_movies"
            app:layout_constraintBottom_toTopOf="@+id/subMenu_btn_sports"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/subMenu_btn_sports"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/submenu_btn_sports"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>